--- a/index.html
+++ b/index.html
@@ -3,11 +3,91 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="https://i.pinimg.com/originals/8e/83/9d/8e839d2a1269353e32577235c92c3d06.png" type="image/png">
-    <link rel="stylesheet" href="../css/index.css">
-    <title>Calendar</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/index.css">
+    <title>Document</title>
 </head>
 <body>
     
+    <main class="container d-flex flex-column justify-content-center mt-5">
+        <h1 class="text-center">EpikCalendarElTraductores</h1>
+        <table class="text-center col-7 mt-5 rounded">
+            <tr>
+                <th colspan="2" class="p-3"><i class="bi bi-chevron-left" id="mesmenos"></i></th>
+                <th colspan="3" class="p-3"><strong class="mesyanyo" id="mesyanyo"></strong></th>
+                <th colspan="2" class="p-3"><i class="bi bi-chevron-right  " id="mesmas"></i></th>
+            </tr>
+            <tr>
+                <th><p>Lunes</p></th>
+                <th><p>Martes</p></th>
+                <th><p>Miercoles</p></th>
+                <th><p>Jueves</p></th>
+                <th><p>Viernes</p></th>
+                <th><p>Sabado</p></th>
+                <th><p>Domingo</p></th>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+        </table>
+        <div class="col-4 ">
+
+        </div>
+    </main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="js/functions.js"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
