--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     
-    <main class="container d-flex flex-column justify-content-center mt-5">
-        <h1 class="text-center">EpikCalendarElTraductores</h1>
-        <table class="text-center col-7 mt-5 rounded">
+    <main class="container p-0 rounded row">
+        <h1 class="text-center col-12 mt-3">EpikCalendarElTraductores</h1>
+        <table class="text-center col-7 mt-5 rounded mb-4 ms-4">
             <tr>
                 <th colspan="2" class="p-3"><i class="bi bi-chevron-left" id="mesmenos"></i></th>
                 <th colspan="3" class="p-3"><strong class="mesyanyo" id="mesyanyo"></strong></th>
@@ -82,9 +82,10 @@
                 <td></td>
             </tr>
         </table>
-        <div class="col-4 ">
-
+        <div class="col-4 ms-5 mt-5 rounded d-flex flex-column justify-content-center bloque-tarea" id="bloque-tarea">
+            <h1 class="text-center">Selecciona un día para ver las tareas</h1>
         </div>
+        
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="js/functions.js"></script>
