--- a/index.html
+++ b/index.html
@@ -108,12 +108,16 @@
             <div class="buscar-div mt-3 col-12 rounded d-flex justify-content-around p-4">  
                     <div class="col-8">
                         <input type="text" placeholder="Buscar tarea" class="rounded col-12 mt-1" id="buscador">
-                        <div class="col-12 contendor-informacion" id="contendor-informacion">
+                        <div class="col-12 contendor-informacion " id="contendor-informacion">
             
                         </div>
                     </div>
                     <button class="btn btn-dark" id="boton-buscador">Buscar</button>
             </div>
+        </div>
+        <div class="col-12 mt-4 d-flex justify-content-around mb-4">
+             <input type="date" id="fechaAPoner" class="col-4">
+             <button class="btn btn-light col-4 today" id="botonHoy">Today</button>
         </div>
 
     </main>
